Izvzemi generirane datoteke pri dekodiranju

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+# Generirane datoteke dekodiranja
+demo/skrivnost*.wav
+demo/sporocilo.txt
+
 # Slikovne datoteke pri analizi
 sf_ampl.png
 sf_spekter_x.png
 sf_spekter_y.png
 sf_spektrogram_x.png
 sf_spektrogram_y.png
-demo/skrivnost*.wav
